compiler/tools/fpp-check/test/command/not_displayable.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/not_displayable.fpp:18.23
  async command C(a1: S)
                      ^
error: type of command parameter must be displayable
